<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="fr.wildcodeschool.monsterlegends.MonsterActivity">

    <TextView
        android:id="@+id/monster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/monster_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/level0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_name" />

    <ImageView
        android:id="@+id/monster_avatar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <ImageView
        android:id="@+id/img_life"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar"
        app:srcCompat="@drawable/life" />

    <ImageView
        android:id="@+id/img_force"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_life"
        app:srcCompat="@drawable/power" />

    <TextView
        android:id="@+id/text_life"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_life"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/img_life"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

    <TextView
        android:id="@+id/text_force"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_force"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/img_force"
        app:layout_constraintTop_toBottomOf="@+id/text_life" />

    <TextView
        android:id="@+id/text_speed"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="98dp"
        android:text="@string/text_speed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

    <TextView
        android:id="@+id/text_stamina"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_stamina"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

    <ImageView
        android:id="@+id/img_speed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="128dp"
        android:layout_marginTop="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar"
        app:srcCompat="@drawable/speed" />

    <ImageView
        android:id="@+id/img_stamina"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toStartOf="@+id/text_stamina"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar"
        app:srcCompat="@drawable/stamina" />

    <ImageView
        android:id="@+id/element_center"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

    <ImageView
        android:id="@+id/element_left"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/element_center"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

    <ImageView
        android:id="@+id/element_right"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/element_center"
        app:layout_constraintTop_toBottomOf="@+id/monster_avatar" />

</android.support.constraint.ConstraintLayout>
